# HW_WEB_13

./: README.md
django/: docker-compose.yml  pyproject.toml
django/quotes_to_scrape/: manage.py
django/quotes_to_scrape/quotes/: admin.py  forms.py  models.py  urls.py  views.py
django/quotes_to_scrape/quotes/migrations/: 0001_initial.py
django/quotes_to_scrape/quotes/static/quotes/: style.css
django/quotes_to_scrape/quotes/templates/quotes/: about.html  author.html  base.html  index.html  quote.html  tag.html
django/quotes_to_scrape/quotes_to_scrape/: asgi.py  settings.py  urls.py  wsgi.py
django/quotes_to_scrape/users/: forms.py  views.py
django/quotes_to_scrape/users/templates/users/: login.html  signup.html
django/quotes_to_scrape/utils/: mongo_migration.py
fast_api/: main.py  pyproject.toml
fast_api/postgres-data/base/13481/: pg_internal.init
fast_api/postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16398  16399  16401  16403  16416  16417  16418  16420  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  (+4 more)
fast_api/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
fast_api/postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
fast_api/src/: sсhemas.py
fast_api/src/repository/: contacts.py  users.py
fast_api/src/routes/: auth.py  contacts.py  users.py
fast_api/src/services/: auth.py  email.py
