[tool.poetry]
name = "homework-22"
version = "0.1.0"
description = ""
authors = ["VladyslavBon <vladislav.bondarenko96@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_22"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
mongoengine = "^0.27.0"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
